@@ -28,6 +28,7 @@
     * 4019 Windows powershell scripts are now always called with the options -noprofile -executionpolicy bypass...
     * 4020 windows/megaraid.bat: now also provides information for the megaraid_bbu check (Battery Backup Unit)
     * 4021 windows agent: improved error message in logfile when a specified winperf counter id could not get resolved
+    * 4357 steelhead_connections: now you can set upper levels for all connection types
     * 4171 FIX: perle_psmu: fixed value error...
     * 4172 FIX: smart.temp: fixed discovery and check function...
     * 4173 FIX: if.include: ignore some more keys in 'Network interfaces and switch ports' rule which are only used for interface grouping
